--- a/frontend/src/components/Footer/Footer.module.scss
+++ b/frontend/src/components/Footer/Footer.module.scss
@@ -5,6 +5,7 @@ $accent-color: #3498db;
 $border-color: #ecf0f1;
 $mobile-breakpoint: 768px;
 $tablet-breakpoint: 992px;
+$desktop-breakpoint: 1200px;
 
 .footer {
   background-color: lighten($primary-color, 75%);
