--- a/frontend/src/pages/ChangeInfomation/ChangeInfomation.module.scss
+++ b/frontend/src/pages/ChangeInfomation/ChangeInfomation.module.scss
@@ -3,6 +3,11 @@
   min-height: 100vh;
   background-color: #fff;
   padding: 24px;
+
+  @media screen and (max-width: 768px) {
+    padding-left: 0;
+    padding-right: 0;
+  }
 }
 
 .account-settings-wrapper {
@@ -14,14 +19,33 @@
   font-size: 36px;
   font-weight: 700;
   margin-bottom: 24px;
+
+  @media screen and (max-width: 768px) {
+   padding: 0 20px;
+  }
+  
 }
 
 .account-settings-content {
   display: flex;
+  justify-content: center;
   background-color: white;
   border-radius: 8px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.05);
   overflow: hidden;
+
+  @media screen and (max-width: 768px) {
+    gap: 20px;
+    .sidebar {
+      padding-left: 20px;
+      padding-right: 0;
+    }
+
+    .main-content {
+      padding-right: 20px;
+      padding-left: 0;
+    }
+  }
 }
 
 // Sidebar
@@ -29,6 +53,12 @@
   width: 256px;
   padding: 24px;
   border-right: 1px solid #f3f4f6;
+
+  @media screen and (max-width: 768px) {
+    width: 170px;
+    border-right: none;
+    border-bottom: 1px solid #f3f4f6;
+  }
 }
 
 .sidebar-nav {
@@ -83,6 +113,14 @@
   justify-content: space-between;
   align-items: center;
   margin-bottom: 32px;
+
+  @media screen and (max-width: 768px) {
+    display: flex;
+    flex-flow: column;
+    justify-content: unset;
+    align-items: unset;
+    gap: 10px;
+  }
 }
 
 .profile-info {
@@ -122,12 +160,22 @@
   justify-content: space-between;
   align-items: center;
   margin-bottom: 24px;
+
+  @media screen and (max-width: 768px) {
+    flex-flow: column;
+    align-items: unset;
+  }
 }
 
 .info-grid {
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 32px 16px;
+
+  @media screen and (max-width: 768px) {
+    display: flex;
+    flex-flow: column;
+  }
 }
 
 .info-item {
@@ -163,5 +211,9 @@
 
   &:hover {
     background-color: #f9fafb;
+  }
+
+  @media screen and (max-width: 768px) {
+    width: 80px;
   }
 }
