--- a/frontend/src/pages/Contact/Contact.module.scss
+++ b/frontend/src/pages/Contact/Contact.module.scss
@@ -46,6 +46,11 @@
         object-fit: cover;
       }
     }
+
+    @media screen and (max-width: 992px) {
+      display: none;
+      
+    }
   }
 }
 
@@ -126,6 +131,11 @@
   //   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   grid-template-columns: auto auto auto;
   gap: 2rem;
+
+  @media screen and (max-width: 992px) {
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    
+  }
 }
 
 .team-card {
