--- a/frontend/src/pages/Control/main.module.scss
+++ b/frontend/src/pages/Control/main.module.scss
@@ -357,6 +357,11 @@
     right: 0;
     margin-top: 20px;
   }
+
+  @media screen and (max-width: 1400px) {
+  display: none;
+    
+  }
 }
 
 .export_excel {
