--- a/frontend/src/pages/Node/main.module.scss
+++ b/frontend/src/pages/Node/main.module.scss
@@ -353,6 +353,10 @@
     right: 0;
     margin-top: 20px;
   }
+
+  @media screen and (max-width: 1200px) {
+  display: none;
+  }
 }
 
 .export_excel {
